<resources>
    <string name="app_name">LearnFaces</string>
    <string name="default_question">Select %s\'s photo.</string>
    <string name="no_images_toast">Not enough contacts with images!</string>
    <string name="start_button_text">Start</string>
    <string name="rtfs_button_text">RTFS on GitHub!</string>
    <string name="source_link">https://github.com/danya02/learn-faces</string>
    <string name="database_link">https://raw.githubusercontent.com/danya02/learn-faces/master/database.json</string>
    <string name="data_base_directory_link">https://raw.githubusercontent.com/danya02/learn-faces/master/</string>
    <string name="title_activity_results">Results</string>
    <string name="results_total">Out of %s pictures, you guessed:</string>
    <string name="good_label">Correctly</string>
    <string name="skip_label">Skipped</string>
    <string name="bad_label">Incorrectly</string>
    <string name="try_again">Try again</string>
    <string name="update_updating_index">Downloading file index…</string>
    <string name="update_writing_index">Writing file index to file…</string>
    <string name="update_json_parse">Parsing JSON…</string>
    <string name="update_create_image_index">Creating image index…</string>
    <string name="update_start_text">Start update!</string>
    <string name="update_no_error">No errors while updating. You\'re good to go!</string>
    <string name="b_continue_from_update_text">Continue</string>
    <string name="update_error_formattable">An error was detected while updating data. The error was:   %s</string>
    <string name="update_try_again">Try again</string>
    <string name="update_downloading_formattable">Downloading file %s…</string>
    <string name="toast_obligatory_update">An update is required for the app to work.</string>
    <string name="b_dataview_text">View Database</string>
    <string name="toast_testing_update">Testing if update is needed…</string>
    <string name="infty">∞</string>
    <string name="questions_hint">Questions</string>
    <string name="default_question_num">10</string>
    <string name="b_skip_text"><![CDATA[Skip >>]]></string>
    <string name="face_content_description">A face.</string>
    <string name="hint_url_json">URL of JSON database</string>
    <string name="error_saving_address">Error while saving address.</string>
    <string name="no_database_need_update">No database file found; update needed.</string>
    <string name="error_in_json">Unexpected error in JSON file.</string>
    <string name="invalid_address_toast">The address is invalid, please check the address.</string>
    <string name="cannot_download_to_test_toast">Cannot download the database. Check the address and your connection.</string>
    <string name="invalid_json_to_test_toast">The object at this URL is not suitable JSON. Check the address.</string>
    <string name="address_set_ok_toast">Address set successfully; run update to confirm.</string>
    <string name="testing_wait_popup">Testing address. Please wait…</string>
    <string name="b_settings">Open Settings</string>
</resources>
