<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.danya02.learnfaces.StartMenuActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/question_num_startmenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/questions_hint"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:text="@string/default_question_num"
                android:textAlignment="center" />

            <Button
                android:id="@+id/b_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="start"
                android:text="@string/start_button_text"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />
        </LinearLayout>

        <Button
            android:id="@+id/b_dataview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="start"
            android:text="@string/b_dataview_text"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/b_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b_update_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/source_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_url_json"
                android:inputType="textUri"
                android:text="@string/data_base_directory_link" />

            <Button
                android:id="@+id/b_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/b_save" />
        </LinearLayout>

        <Button
            android:id="@+id/b_rtfs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toRtfs"
            android:text="@string/rtfs_button_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
