<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.danya02.learnfaces.GameActivity">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/b1"
            android:layout_width="124dp"
            android:layout_height="164dp"
            android:contentDescription="@string/face_content_description"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/null_face" />

        <ImageButton
            android:id="@+id/b2"
            android:layout_width="124dp"
            android:layout_height="164dp"
            android:layout_column="1"
            android:layout_row="0"
            android:contentDescription="@string/face_content_description"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/null_face" />

        <ImageButton
            android:id="@+id/b3"
            android:layout_width="124dp"
            android:layout_height="164dp"
            android:layout_column="0"
            android:layout_row="1"
            android:contentDescription="@string/face_content_description"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/null_face" />

        <ImageButton
            android:id="@+id/b4"
            android:layout_width="124dp"
            android:layout_height="164dp"
            android:layout_column="1"
            android:layout_row="1"
            android:contentDescription="@string/face_content_description"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/null_face" />
    </GridLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/skip"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:elevation="0dp"
        android:text="@string/b_skip_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
